Fix anchor links alignment

--- a/app/webpacker/src/stylesheets/custom.scss
+++ b/app/webpacker/src/stylesheets/custom.scss
@@ -113,6 +113,11 @@ h1, h2, h3, h4, h5, h6, p {
   text-align: center !important;
 }
 
+#dota-2, #league-requirements {
+  padding-top:51px;
+  margin-top: -51px;
+}
+
 .btn-nocturnal {
   border-radius: 30px;
   font-size: 1rem;
